...
    "store" to "Store",
    "percent" to "Percent",
    "trending_up" to "Trend",
    "keyboard_return" to "Return",
    "card_giftcard" to "Gift",
    "shopping_bag" to "Shopping Bag",
    "movie" to "Entertainment",
    "flight" to "Travel",
    "medical_services" to "Healthcare",
    "shield" to "Insurance",
    "school" to "Education",
    "credit_card" to "Card",
    "show_chart" to "Investment",
...
